include README in the tarball

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ repositories{
 task prepareDir(type: Copy){
     from("."){
         include("*.clj")
+        include("README.md")
     }
     into leinDir
 }
