--- a/etc/s3Upload.gradle
+++ b/etc/s3Upload.gradle
@@ -25,6 +25,7 @@ buildscript {
   repositories {
     mavenLocal()
     mavenCentral()
+    mavenRepo name: 'conjars', url: 'http://conjars.org/repo/'
     // mavenRepo name: 'monochromeroad', url: 'http://repository-monochromeroad.forge.cloudbees.com/release/'
   }
   dependencies {
