move to cascading 2.5.1 and add a simple README into the tarball

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ apply from: "etc/s3Upload.gradle"
 task prepareDir(type: Copy){
     from("."){
         include("*.clj")
-        include("README.md")
+        include("README-lein.md")
     }
     into leinDir
 }
