--- a/etc/s3Upload.gradle
+++ b/etc/s3Upload.gradle
@@ -25,8 +25,8 @@ buildscript {
   repositories {
     mavenLocal()
     mavenCentral()
-    mavenRepo name: 'conjars', url: 'http://conjars.org/repo/'
-    mavenRepo name: 'monochromeroad', url: 'http://repository-monochromeroad.forge.cloudbees.com/release/'
+    maven{  url 'http://conjars.org/repo/' }
+    maven{ url 'http://repository-monochromeroad.forge.cloudbees.com/release/' }
   }
   dependencies {
        classpath group: 'com.monochromeroad.gradle', name: "gradle-aws-s3-sync", version: '0.5'
